--- a/1_cpp/ex03/Makefile
+++ b/1_cpp/ex03/Makefile
@@ -23,7 +23,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(FLAGS) -o $@ $^
 
-%.o: %.cpp %.hpp
+%.o: %.cpp *.hpp
 	$(CC) $(FLAGS) -c -o $@ $<
 
 clean:
