--- a/2_cpp/ex01/Makefile
+++ b/2_cpp/ex01/Makefile
@@ -21,7 +21,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(FLAGS) -o $@ $^
 
-%.o: %.cpp %.hpp
+%.o: %.cpp *.hpp
 	$(CC) $(FLAGS) -c -o $@ $<
 
 clean:
