--- a/4_cpp/ex01/Makefile
+++ b/4_cpp/ex01/Makefile
@@ -24,7 +24,7 @@ all: $(NAME)
 $(NAME): $(OBJS)
 	$(CC) $(FLAGS) -o $@ $^
 
-%.o: %.cpp %.hpp
+%.o: %.cpp *.hpp
 	$(CC) $(FLAGS) -c -o $@ $<
 
 clean:
