--- a/8_cpp/ex02/.vscode/settings.json
+++ b/8_cpp/ex02/.vscode/settings.json
@@ -14,7 +14,6 @@
 		"cstdint": "cpp",
 		"cstdio": "cpp",
 		"cstdlib": "cpp",
-		"ctime": "cpp",
 		"cwchar": "cpp",
 		"cwctype": "cpp",
 		"deque": "cpp",
@@ -34,9 +33,7 @@
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"utility": "cpp",
-		"fstream": "cpp",
 		"initializer_list": "cpp",
-		"iomanip": "cpp",
 		"iosfwd": "cpp",
 		"iostream": "cpp",
 		"istream": "cpp",
@@ -44,48 +41,9 @@
 		"new": "cpp",
 		"numbers": "cpp",
 		"ostream": "cpp",
-		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
 		"typeinfo": "cpp",
-		"*.tpp": "cpp",
-		"any": "cpp",
-		"barrier": "cpp",
-		"bitset": "cpp",
-		"cfenv": "cpp",
-		"charconv": "cpp",
-		"chrono": "cpp",
-		"cinttypes": "cpp",
-		"codecvt": "cpp",
-		"complex": "cpp",
-		"condition_variable": "cpp",
-		"coroutine": "cpp",
-		"csetjmp": "cpp",
-		"csignal": "cpp",
-		"cstring": "cpp",
-		"cuchar": "cpp",
-		"forward_list": "cpp",
-		"list": "cpp",
-		"map": "cpp",
-		"set": "cpp",
-		"unordered_set": "cpp",
-		"optional": "cpp",
-		"ratio": "cpp",
-		"regex": "cpp",
-		"source_location": "cpp",
-		"future": "cpp",
-		"latch": "cpp",
-		"mutex": "cpp",
-		"ranges": "cpp",
-		"scoped_allocator": "cpp",
-		"semaphore": "cpp",
-		"shared_mutex": "cpp",
-		"span": "cpp",
-		"stop_token": "cpp",
-		"syncstream": "cpp",
-		"thread": "cpp",
-		"typeindex": "cpp",
-		"valarray": "cpp",
-		"variant": "cpp"
+		"list": "cpp"
 	}
 }
