--- a/9_cpp/truc/Makefile
+++ b/9_cpp/truc/Makefile
@@ -1,7 +1,7 @@
 ### COMPILATION ###
 
 CC      = c++
-FLAGS   = -Wall -Wextra -Werror -fsanitize=address
+FLAGS   = -Wall -Wextra -Werror
 
 ### EXECUTABLE ###
 
