--- a/9_cpp/ex02/Makefile
+++ b/9_cpp/ex02/Makefile
@@ -1,7 +1,7 @@
 ### COMPILATION ###
 
 CC      = c++
-FLAGS   = -Wall -Wextra -Werror -std=c++98
+FLAGS   = -Wall -Wextra -Werror
 
 ### EXECUTABLE ###
 
