cpp01 cleaned up. Ready to push

--- a/1_cpp/ex01/Makefile
+++ b/1_cpp/ex01/Makefile
@@ -1,7 +1,7 @@
 ### COMPILATION ###
 
 CC      = c++
-FLAGS   = -Wall -Wextra -Werror
+FLAGS   = -Wall -Wextra -Werror -fsanitize=address
 
 ### EXECUTABLE ###
 
